--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto', sans-serif;
     background-color: #caebf2;
     color: #001f3f;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto', monospace;
 }
 
 .quote {
